@@ -1,3 +1,8 @@
+2011-08-27  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/50202
+	* gcc.target/i386/pr50202.c: New test.
+
 2011-08-26  Mikael Morin  <mikael.morin@gcc.gnu.org>
 
 	PR fortran/50050
